[package]
name = "blog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rocket = { version= "=0.5.0-rc.3", features = ["json"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "migrate", "uuid", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
